Arreglando la seguridad del sistema